--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,3 +57,13 @@ body {
         opacity: 0;
     }
 }
+
+.window-maximized {
+  top: 0 !important;
+  left: 0 !important;
+  width: 100dvw !important;
+  height: 100dvh !important;
+  max-width: 100dvw !important;
+  max-height: 100dvh !important;
+  border-radius: 0 !important;
+}
