--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,8 +1,9 @@
 @layer components {
 
     .window-scroll {
-        @apply max-h-[70vh] overflow-y-auto;
+        @apply max-h-[90vh] overflow-y-auto;
     }
+
 
     .icon {
         @apply p-1 hover:bg-gray-200 rounded hover:cursor-default;
@@ -25,10 +26,6 @@
 
         .dock-container {
             @apply bg-white/20 backdrop-blur-md justify-between rounded-2xl p-1.5 flex items-end gap-1.5;
-        }
-
-        .tooltip {
-            @apply !py-1 !px-3 !w-fit !text-center !text-xs !rounded-md !bg-blue-200 !text-blue-900 !shadow-2xl;
         }
 
         .dock-icon {
@@ -156,7 +153,7 @@
     }
 
     #contact {
-        @apply max-w-2xl absolute top-60 left-5/12 bg-white shadow-2xl drop-shadow-2xl rounded-xl overflow-hidden;
+        @apply max-w-2xl absolute top-40 left-5/12 bg-white shadow-2xl drop-shadow-2xl rounded-xl overflow-hidden;
 
         h2 {
             @apply font-bold text-sm text-center w-full;
@@ -244,7 +241,8 @@
     }
 
     #resume {
-        @apply w-fit h-fit absolute top-16 left-7/12 bg-white shadow-2xl drop-shadow-2xl rounded-xl overflow-hidden;
+        @apply w-fit h-fit absolute top-16 left-7/12 bg-white shadow-2xl drop-shadow-2xl rounded-xl overflow-hidden ;
+        max-height: 90vh;
 
         #window-header {
             h2 {
