--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,7 +38,7 @@ body {
     display: inline-block;
     width: 0.6em;
     height: 1.2em;
-    background: #e5e7eb;
+    background: #232323;
     /* light terminal white */
     margin-left: 2px;
     vertical-align: bottom;
@@ -66,4 +66,8 @@ body {
   max-width: 100dvw !important;
   max-height: 100dvh !important;
   border-radius: 0 !important;
+}
+
+.tooltip {
+    @apply !py-1 !px-3 !w-fit !text-center !text-xs !rounded-md !bg-blue-200 !text-blue-900 !shadow-2xl;
 }
