--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -4,7 +4,13 @@
     }
 
     nav {
-        @apply flex justify-between items-center bg-white/50 backdrop-blur-3xl p-2 px-5 select-none;
+        @apply 
+          fixed top-0 left-0 w-full
+          z-[99999]
+          flex justify-between items-center
+          bg-white/50 backdrop-blur-3xl
+          p-2 px-5
+          select-none;
 
         div {
             @apply flex items-center max-sm:w-full max-sm:justify-center gap-5;
