--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,7 +38,7 @@ body {
     display: inline-block;
     width: 0.6em;
     height: 1.2em;
-    background: #232323;
+    background: #dfdcdc;
     /* light terminal white */
     margin-left: 2px;
     vertical-align: bottom;
