--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -4,16 +4,7 @@
     }
 
     nav {
-        img{
-
-        }
-        @apply 
-          fixed top-0 left-0 w-full
-          z-[300]
-          flex justify-between items-center
-          bg-black/80 backdrop-blur-3xl
-        px-5
-          select-none;
+        @apply fixed top-0 left-0 w-full z-[300] flex justify-between items-center bg-black/80 backdrop-blur-3xl px-5 select-none;
 
         div {
             @apply flex items-center max-sm:w-full max-sm:justify-center gap-5;
@@ -27,19 +18,11 @@
             @apply flex items-center gap-5 max-sm:hidden;
 
             li {
-  @apply
-    text-sm cursor-pointer
-    px-2 py-1
-    rounded-full
-    transition-colors
-    hover:bg-white/10
-    font-semibold
-    text-white
-    
-}
+                @apply text-sm cursor-pointer px-2 py-1 rounded-full transition-colors hover:bg-white/10 font-semibold text-white
+            }
         }
 
-        time {
+        .time-format {
             @apply text-sm font-medium text-white;
         }
     }
