feat: added glass effect clases but not used

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -71,3 +71,29 @@ body {
 .tooltip {
     @apply !py-1 !px-3 !w-fit !text-center !text-xs !rounded-md !bg-blue-200 !text-blue-900 !shadow-2xl;
 }
+
+.window-glass {
+  background-color: rgba(48, 48, 48, 0.3);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px) saturate(1.4);
+  border-radius: 1rem;
+
+  border: none;
+  box-shadow:
+    inset 0 0 20px rgba(255, 255, 255, 0.45),
+    inset 0 0 50px rgba(255, 255, 255, 0.25);
+  will-change: transform;
+}
+
+.window-glass-header {
+  background-color: rgba(48, 48, 48, 0.3);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px) saturate(1.4);
+
+  border: none;
+  box-shadow:
+    inset 0 0 20px rgba(255, 255, 255, 0.45),
+    inset 0 0 50px rgba(255, 255, 255, 0.25);
+  will-change: transform;
+}
+
